# openvpn3-gui-rs

./: .gitignore  .gitmessage  Cargo.toml  Makefile  README.md  build.rs  tasks.md
.github/workflows/: ci.yml  release.yml
data/: net.openvpn.openvpn3_gui_rs.desktop  net.openvpn.openvpn3_gui_rs.gschema.xml  net.openvpn.openvpn3_gui_rs.metainfo.xml  net.openvpn.v3.killswitch.conf  net.openvpn.v3.killswitch.service
docs/: auth-flow.md  failure-modes.md  kill-switch.md  split-tunneling.md
gui/: Cargo.toml  build.rs
gui/src/: autostart.rs  config.rs  main.rs
gui/src/app/: actions.rs  application.rs  auth_dispatch.rs  auth_handlers.rs  bypass_apply.rs  challenge_handler.rs  config_ops.rs  credential_handler.rs  dbus_init.rs  log_buffer.rs  mod.rs  service_watcher.rs  session_ops.rs  signal_handlers.rs  stats_poller.rs  status_handler.rs  timeout_watcher.rs
gui/src/app/credential_handler/: mod.rs  retry.rs  slots.rs
gui/src/app/stats_poller/: drift.rs  mod.rs  stall.rs
gui/src/app/status_handler/: handlers.rs  killswitch_glue.rs  mod.rs
gui/src/credentials/: mod.rs  policy.rs  store.rs
gui/src/dbus/: configuration.rs  killswitch.rs  mod.rs  session.rs  session_status.rs
gui/src/dialogs/: about.rs  configuration.rs  credentials.rs  layout.rs  logs.rs  mod.rs  notification.rs  preferences.rs  singleton.rs  stats.rs
gui/src/dialogs/logs/: export.rs  filter.rs  format.rs  mod.rs
gui/src/dialogs/notification/: bypass.rs  core.rs  dedup.rs  interactive.rs  killswitch.rs  mod.rs
gui/src/dialogs/preferences/: general_tab.rs  mod.rs  routing_tab.rs  security_tab.rs
gui/src/settings/: gsettings.rs  gsettings_tests.rs  mod.rs
gui/src/status/: mod.rs
gui/src/tray/: indicator.rs  lookup.rs  menu.rs  mod.rs  pixmaps.rs  shared_state.rs
gui/src/tray/menu/: mod.rs  submenus.rs
helper/: Cargo.toml
helper/src/: bypass.rs  main.rs  nft.rs  service.rs  validation.rs  watcher.rs
pkg/aur/: PKGBUILD
pkg/aur-helper/: PKGBUILD
pkg/deb/: postinst  prerm
scripts/: poc-split-tunnel.sh  pre-commit  prepend-metainfo-release.sh
src/: config.rs  main.rs
src/app/: actions.rs  application.rs  auth_dispatch.rs  auth_handlers.rs  challenge_handler.rs  config_ops.rs  credential_handler.rs  dbus_init.rs  mod.rs  session_ops.rs  signal_handlers.rs  stats_poller.rs  status_handler.rs
src/credentials/: mod.rs  store.rs
src/dbus/: configuration.rs  mod.rs  session.rs  session_status.rs  types.rs
src/dialogs/: about.rs  configuration.rs  credentials.rs  layout.rs  logs.rs  mod.rs  notification.rs  preferences.rs
src/settings/: gsettings.rs  mod.rs
src/status/: mapping.rs
src/tray/: indicator.rs  menu.rs  mod.rs  pixmaps.rs
tests/: gsettings_schema_test.sh  smoke_test.sh
